k8s/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: captainhook
  labels:
    app: captainhook
spec:
  type: "ClusterIP"
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: captainhook
